fix: ensure that portfolio card does not lead to overflow on x axis

--- a/components/PortfolioCard/PortfolioCard.module.scss
+++ b/components/PortfolioCard/PortfolioCard.module.scss
@@ -41,4 +41,7 @@
   .img {
     max-width: 260px;
   }
+  .text {
+    max-width: 260px;
+  }
 }
